@@ -7,6 +7,7 @@ import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.linegraphing.common.LGColors;
 import edu.colorado.phet.linegraphing.common.model.LineFormsModel;
 import edu.colorado.phet.linegraphing.common.model.StraightLine;
+import edu.colorado.phet.linegraphing.common.model.WellDefinedLineProperty;
 
 /**
  * Model for the "Slope-Intercept" module.
@@ -26,7 +27,7 @@ public class SlopeInterceptModel extends LineFormsModel {
     }
 
     private SlopeInterceptModel( DoubleRange riseRange, DoubleRange runRange, DoubleRange interceptRange ) {
-        super( new StraightLineProperty( new StraightLine( riseRange.getDefault(), runRange.getDefault(), interceptRange.getDefault(),
+        super( new WellDefinedLineProperty( new StraightLine( riseRange.getDefault(), runRange.getDefault(), interceptRange.getDefault(),
                                                            LGColors.INTERACTIVE_LINE, LGColors.INTERACTIVE_LINE ) ) );
 
         this.riseRange = new Property<DoubleRange>( riseRange );
@@ -55,33 +56,5 @@ public class SlopeInterceptModel extends LineFormsModel {
         riseRange.reset();
         runRange.reset();
         interceptRange.reset();
-    }
-
-    private static class StraightLineProperty extends Property<StraightLine> {
-
-        public StraightLineProperty( StraightLine line ) {
-            super( line );
-        }
-
-        @Override public void set( StraightLine line ) {
-            double newRise = line.rise;
-            double newRun = line.run;
-            // Skip over values that would result in slope=0/0
-            if ( line.rise == 0 && line.run == 0 ) {
-                if ( get().run != 0 ) {
-                    // run changed, skip over run = 0
-                    newRun = ( get().run > 0 ) ? -1 : 1;
-                }
-                else if ( get().rise != 0 ) {
-                    // rise changed, skip over rise = 0
-                    newRise = ( get().rise > 0 ) ? -1 : 1;
-                }
-                else {
-                    // rise and run haven't changed, arbitrarily move rise toward origin
-                    newRise = ( get().yIntercept > 0 ) ? -1 : 1;
-                }
-            }
-            super.set( new StraightLine( newRise, newRun, line.yIntercept, line.color, line.highlightColor ) );
-        }
     }
 }
